# email-verification

./: Dockerfile  README.md  dev-environment.json  docker-compose.yml
functions/create_subscription/: main.py  pyproject.toml
infrastructure/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
infrastructure/stacks/: infrastructure.py
